implementing the profile pages and fixing the color patterns (the styles.scss)